force-app/main/default/objects/Opportunity/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <inlineHelpText>Date membership associated with this donation expired (if blank, membership is still active)</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>