force-app/main/default/objects/Opportunity/fields/Auth_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Auth_Transaction__c</fullName>
    <description>The Litle Transaction Id for the authorization of this Opportunity&#39;s payment method</description>
    <inlineHelpText>Worldpay transaction Id for the credit card authorization</inlineHelpText>
    <label>Auth Transaction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>