force-app/main/default/objects/Opportunity/fields/Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date__c</fullName>
    <inlineHelpText>Date recurring donation was cancelled at donor&#39;s request</inlineHelpText>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>