force-app/main/default/objects/Opportunity/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardship</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Intended 1 Year Only</fullName>
            </value>
            <value>
                <fullName>Intended Single Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>