force-app/main/default/objects/Opportunity/fields/Card_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration__c</fullName>
    <inlineHelpText>MMYY</inlineHelpText>
    <label>Card Expiration</label>
    <length>4</length>
    <type>Text</type>
</CustomField>