force-app/main/default/objects/Opportunity/fields/Credit_Card_Bin__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Bin__c</fullName>
    <label>Credit Card Bin</label>
    <length>6</length>
    <type>Text</type>
</CustomField>