force-app/main/default/objects/Opportunity/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <inlineHelpText>Type of device used to access donation gateway</inlineHelpText>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DESKTOP</fullName>
            </value>
            <value>
                <fullName>TABLET</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>