force-app/main/default/objects/Opportunity/fields/End_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Reason__c</fullName>
    <label>End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Nonpayment</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>