force-app/main/default/objects/Opportunity/fields/Initial_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Amount__c</fullName>
    <label>Initial Payment Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>