force-app/main/default/objects/Opportunity/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Opportunity was cancelled manually at donor&#39;s request</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>