force-app/main/default/objects/Opportunity/fields/Membership_Active__c.field-meta.xml
<CustomField>
    <fullName>Membership_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this donation currently qualifies donor for membership benefits</inlineHelpText>
    <label>Membership Active</label>
    <type>Checkbox</type>
</CustomField>