force-app/main/default/objects/Opportunity/fields/Membership_Tier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Tier__c</fullName>
    <label>Membership Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>