force-app/main/default/objects/Opportunity/fields/Number_of_Approved_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approved_Payments__c</fullName>
    <description>The number of &#39;Approved&#39; Payments associated with this Opportunity.</description>
    <inlineHelpText>The number of successful Payments processed from this donation</inlineHelpText>
    <label>Number of Approved Payments (Opp.)</label>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>