force-app/main/default/objects/Opportunity/fields/Payment_Stopped_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Stopped_Date__c</fullName>
    <inlineHelpText>Date payments for this opportunity were cancelled or rejected by Worldpay (if blank, opportunity is still ongoing)</inlineHelpText>
    <label>Payment Stopped Date</label>
    <summarizedField>Payment__c.Payment_Stopped_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Stopped_Date__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>