force-app/main/default/objects/Opportunity/fields/Projected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_End_Date__c</fullName>
    <description>Monthly: End of the month following the most recent payment. One Time:  End of month following 12 months from Oppty close date.</description>
    <inlineHelpText>Date membership benefits for this donation are projected to expire if subsequent payment is not processed</inlineHelpText>
    <label>Projected End Date</label>
    <type>Date</type>
</CustomField>