force-app/main/default/objects/Opportunity/fields/Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact of which donation was made in honor, or contact responsible for facilitating this donation</description>
    <label>Soft Credit</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Soft Credit)</relationshipLabel>
    <relationshipName>Soft_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>