force-app/main/default/objects/Opportunity/fields/Standardized_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Street_2__c</fullName>
    <label>Standardized Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>