force-app/main/default/objects/Opportunity/fields/Total_Approved_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Payments__c</fullName>
    <description>The sum total of all &#39;Approved&#39; Payments associated with this Opportunity.</description>
    <inlineHelpText>The total dollar value of payments received from this donation</inlineHelpText>
    <label>Total Approved Payments (Opp.)</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Refunded</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>