force-app/main/default/objects/Opportunity/fields/Use_Custom_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the donor select a custom Shipping Address?</description>
    <inlineHelpText>If checked, shipping address for this donation&#39;s gift is different than the donor&#39;s billing address</inlineHelpText>
    <label>Use Custom Shipping Address</label>
    <type>Checkbox</type>
</CustomField>