force-app/main/default/objects/Opportunity/listViews/Active_Monthly_Donations.listView-meta.xml
<ListView>
    <fullName>Active_Monthly_Donations</fullName>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Initial_Payment_Amount__c</columns>
    <columns>Total_Approved_Payments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Monthly__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>End_Reason__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Monthly Donations</label>
</ListView>