force-app/main/default/objects/Opportunity/listViews/Cancelled_Donations.listView-meta.xml
<ListView>
    <fullName>Cancelled_Donations</fullName>
    <columns>Cancel_Date__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact__c</columns>
    <columns>Initial_Payment_Amount__c</columns>
    <columns>Cancel_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Reason__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Donations</label>
</ListView>