force-app/main/default/objects/Opportunity/listViews/Lapsed_Monthly_Donations.listView-meta.xml
<ListView>
    <fullName>Lapsed_Monthly_Donations</fullName>
    <columns>Payment_Stopped_Date__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact__c</columns>
    <columns>Initial_Payment_Amount__c</columns>
    <columns>Number_of_Approved_Payments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Monthly__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>End_Reason__c</field>
        <operation>equals</operation>
        <value>Nonpayment</value>
    </filters>
    <label>Lapsed Monthly Donations</label>
</ListView>